--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Azariah Laulusa's CSCE 190 Site
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Azariah Laulusa</title>
+    </head>
+    <body>
+        <h1>Azariah Laulusa's CSCE 190 Site</h1>
+    </body>
+</html>
