--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Azariah Laulusa's CSCE 190 Site</h1>
+        <p>I &hearts; my CSCE 190 class!</p>
     </body>
 </html>
