--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Azariah Laulusa's CSCE 190 Site</h1>
-        <p>I &hearts; my CSCE 190 class!</p>
+        <section class="assignment">
+            <img src="Downloads/CSCE190/CSCE190ProblemStatement">
+        </section>
     </body>
 </html>
