--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Azariah Laulusa's CSCE 190 Site</h1>
         <section class="assignment">
-            <img src="image/CSCE190ProblemStatement.pdf">
+            <img src="image/problemstatement.png">
         </section>
     </body>
 </html>
