--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <body>
         <h1>Azariah Laulusa's CSCE 190 Site</h1>
         <section class="assignment">
-            <img src="image/problemstatement.png" width="500" height="600">
+            <a href="pdf/problemstatementlink.pdf"><img src="image/problemstatement.png" width="500" height="600"></a>
             <section class="assignment-details">
-                <h2>Problem Statement: Parking Finder</h2>
+                <a href="pdf/problemstatementlink.pdf"><h2>Problem Statement: Parking Finder</h2></a>
                 <p>Parking has always been a major issue for students and faculty at UofSC, as well as, the surrounding area. Our users are aggravated because of the implications this causes within their academic/professional careers. Our solution should provide users with locations that are most likely to have parking spots available. 
                 </p>
-                <a href="pdf/problemstatementlink.pdf">Problem Statement pdf</a>
             </section>
         </section>
     </body>
