--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     </head>
     <body>
         <h1>Azariah Laulusa's CSCE 190 Site</h1>
+
+        <!-- Problem Statement Assignment-->
         <section class="assignment">
             <a href="pdf/problemstatementlink.pdf"><img src="image/problemstatement.png" width="500" height="600"></a>
             <section class="assignment-details">
                 <a href="pdf/problemstatementlink.pdf"><h2>Problem Statement: Parking Finder</h2></a>
-                <p>Parking has always been a major issue for students and faculty at UofSC, as well as, the surrounding area. Our users are aggravated because of the implications this causes within their academic/professional careers. Our solution should provide users with locations that are most likely to have parking spots available. 
+                <p>
+                    Parking has always been a major issue for students and faculty at UofSC, as well as, the surrounding area. Our users are aggravated because of the implications this causes within their academic/professional careers. Our solution should provide users with locations that are most likely to have parking spots available. 
+                </p>
+            </section>
+        </section>
+
+        <!-- Affinity Digram Assignment-->
+        <section class="assignment">
+            <a href="pdf/parkingfinder.pdf"><img src="image/parkingfinderimage.png" width="500" height="600"></a>
+            <section class="assignment-details">
+                <a href="pdf/parkingfinder.pdf"><h2>Affinity Diagram: Parking Finder</h2></a>
+                <p>
+                    My group members and I got together to come up with the problems, calculations, and solutions to finding parking.
                 </p>
             </section>
         </section>
