--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <!-- Problem Statement Assignment-->
         <section class="assignment">
-            <a href="pdf/problemstatementlink.pdf"><img src="image/problemstatementimage.jpg"></a>
+            <a href="pdf/problemstatementlink.pdf"><img src="image/problemstatementimage.jpg" width="300" height="300"></a>
             <section class="assignment-details">
                 <a href="pdf/problemstatementlink.pdf"><h2>Problem Statement: Parking Finder</h2></a>
                 <p>
@@ -19,7 +19,7 @@
 
         <!-- Affinity Digram Assignment-->
         <section class="assignment">
-            <a href="pdf/parkingfinder.pdf"><img src="image/parkingfinderimage.png"></a>
+            <a href="pdf/parkingfinder.pdf"><img src="image/parkingfinderimage.png" width="300" height="300"></a>
             <section class="assignment-details">
                 <a href="pdf/parkingfinder.pdf"><h2>Affinity Diagram: Parking Finder</h2></a>
                 <p>
