--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CSCE 190: Azariah Laulusa</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Azariah Laulusa's CSCE 190 Site</h1>
@@ -23,7 +24,7 @@
             <section class="assignment-details">
                 <a href="pdf/parkingfinder.pdf"><h2>Affinity Diagram: Parking Finder</h2></a>
                 <p>
-                    My group members and I got together to come up with the problems, calculations, and solutions to finding parking.
+                    My group members and I got together to come up with the many problems, calculations, and solutions to finding parking.
                 </p>
             </section>
         </section>
