--- a/index.html
+++ b/index.html
@@ -28,5 +28,16 @@
                 </p>
             </section>
         </section>
+
+         <!-- Personna Assignment-->
+         <section class="assignment">
+            <a href="pdf/personna.pdf"><img src="image/PersonnaImage.jpg" width="300" height="300"></a>
+            <section class="assignment-details">
+                <a href="pdf/personna.pdf"><h2>Personna: Barb Wyer</h2></a>
+                <p>
+                    My group members and I got together to come up with the many problems, calculations, and solutions to finding parking.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
