--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          <section class="assignment">
             <a href="pdf/Personas_Combined.pdf"><img src="image/PersonnaImage.jpg" width="300" height="300"></a>
             <section class="assignment-details">
-                <a href="pdf/personna.pdf"><h2>Personna: 5 Personnas for Parking Finder App</h2></a>
+                <a href="pdf/Personas_Combined.pdf"><h2>Personna: 5 Personnas for Parking Finder App</h2></a>
                 <p>
                    Personnas of typical parking finder app users.
                 </p>
