--- a/index.html
+++ b/index.html
@@ -39,5 +39,16 @@
                 </p>
             </section>
         </section>
+
+         <!-- Storyboard Assignment-->
+         <section class="assignment">
+            <a href="pdf/parking_finder_storyboards.pdf"><img src="image/storyboardhandout.JPG" width="300" height="300"></a>
+            <section class="assignment-details">
+                <a href="pdf/parking_finder_storyboards.pdf"><h2>Storyboard: 5 Storyboards for Parking Finder App </h2></a>
+                <p>
+                   Storyboards that represent the benefits of using the Parking Finder app for each personna.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
