--- a/index.html
+++ b/index.html
@@ -50,5 +50,16 @@
                 </p>
             </section>
         </section>
+
+        <!-- App Sketch Assignment-->
+        <section class="assignment">
+            <a href="pdf/ParkingSketch.pdf"><img src="image/appsketchimage.PNG" width="300" height="300"></a>
+            <section class="assignment-details">
+                <a href="pdf/ParkingSketch.pdf"><h2>Sketches</h2></a>
+                <p>
+                   Rough ideas of how the application may look.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
