--- a/index.html
+++ b/index.html
@@ -6,60 +6,64 @@
     </head>
     <body>
         <h1>Azariah Laulusa's CSCE 190 Site</h1>
-
-        <!-- Problem Statement Assignment-->
-        <section class="assignment">
-            <a href="pdf/problemstatementlink.pdf"><img src="image/problemstatementimage.jpg" width="300" height="300"></a>
-            <section class="assignment-details">
-                <a href="pdf/problemstatementlink.pdf"><h2>Problem Statement: Parking Finder</h2></a>
+        <div class="assignments">
+            <!-- Problem Statement Assignment-->
+            <section class="assignment">
+                <a href="pdf/problemstatementlink.pdf">
+                    <h2>Problem Statement: Parking Finder</h2>
+                </a>
+                <a href="pdf/problemstatementlink.pdf">
+                    <img src="image/problemstatementimage.jpg" width="300" height="300">
+                </a>
                 <p>
-                    Parking has always been a major issue for students and faculty at UofSC, as well as, the surrounding area. Our users are aggravated because of the implications this causes within their academic/professional careers. Our solution should provide users with locations that are most likely to have parking spots available. 
-                </p>
+                     Parking has always been a major issue for students and faculty at UofSC, as well as, the surrounding area. Our users are aggravated because of the implications this causes within their academic/professional careers. Our solution should provide users with locations that are most likely to have parking spots available. 
+                 </p>
             </section>
-        </section>
 
-        <!-- Affinity Digram Assignment-->
-        <section class="assignment">
-            <a href="pdf/parkingfinder.pdf"><img src="image/parkingfinderimage.png" width="300" height="300"></a>
-            <section class="assignment-details">
+            <!-- Affinity Digram Assignment-->
+            <section class="assignment">
                 <a href="pdf/parkingfinder.pdf"><h2>Affinity Diagram: Parking Finder</h2></a>
+                <a href="pdf/parkingfinder.pdf"><img src="image/parkingfinderimage.png" width="300" height="300"></a>
                 <p>
                     My group members and I got together to come up with the many problems, calculations, and solutions to finding parking.
                 </p>
             </section>
-        </section>
 
-         <!-- Personna Assignment-->
-         <section class="assignment">
-            <a href="pdf/Personas_Combined.pdf"><img src="image/PersonnaImage.jpg" width="300" height="300"></a>
-            <section class="assignment-details">
+            <!-- Personna Assignment-->
+            <section class="assignment">
                 <a href="pdf/Personas_Combined.pdf"><h2>Personna: 5 Personnas for Parking Finder App</h2></a>
+                <a href="pdf/Personas_Combined.pdf"><img src="image/PersonnaImage.jpg" width="300" height="300"></a>
                 <p>
-                   Personnas of typical parking finder app users.
+                    Personnas of typical parking finder app users.
                 </p>
             </section>
-        </section>
 
-         <!-- Storyboard Assignment-->
-         <section class="assignment">
-            <a href="pdf/parking_finder_storyboards.pdf"><img src="image/storyboardhandout.JPG" width="300" height="300"></a>
-            <section class="assignment-details">
+            <!-- Storyboard Assignment-->
+            <section class="assignment">
                 <a href="pdf/parking_finder_storyboards.pdf"><h2>Storyboard: 5 Storyboards for Parking Finder App </h2></a>
+                <a href="pdf/parking_finder_storyboards.pdf"><img src="image/storyboardhandout.JPG" width="300" height="300"></a>
                 <p>
-                   Storyboards that represent the benefits of using the Parking Finder app for each personna.
+                    Storyboards that represent the benefits of using the Parking Finder app for each personna.
                 </p>
             </section>
-        </section>
 
-        <!-- App Sketch Assignment-->
-        <section class="assignment">
-            <a href="pdf/ParkingSketch.pdf"><img src="image/appsketchimage.PNG" width="300" height="300"></a>
-            <section class="assignment-details">
+            <!-- App Sketch Assignment-->
+            <section class="assignment">
                 <a href="pdf/ParkingSketch.pdf"><h2>Sketches</h2></a>
+                <a href="pdf/ParkingSketch.pdf"><img src="image/appsketchimage.PNG" width="300" height="300"></a>
                 <p>
-                   Rough ideas of how the application may look.
+                    Rough ideas of how the application may look.
                 </p>
             </section>
-        </section>
+
+            <!-- Prototype Assignment-->
+            <section class="assignment">
+                <a href=https://youtu.be/nmEbS1jprYY><h2>Paper Prototype</h2></a>
+                <a href=https://youtu.be/nmEbS1jprYY><img src="image/prototypeimage.jpg" width="300" height="300"></a>
+                <p>
+                    Paper walk-through of every screen in the Parking Finder application.
+                </p>
+            </section>
+        </div>
     </body>
 </html>
