--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <h2>Problem Statement: Parking Finder</h2>
                 </a>
                 <a href="pdf/problemstatementlink.pdf">
-                    <img src="image/problemstatementimage.jpg" width="300" height="300">
+                    <img src="image/problemstatementimage.jpg" width="220" height="220">
                 </a>
                 <p>
                      Parking has always been a major issue for students and faculty at UofSC, as well as, the surrounding area. Our users are aggravated because of the implications this causes within their academic/professional careers. Our solution should provide users with locations that are most likely to have parking spots available. 
@@ -23,7 +23,7 @@
             <!-- Affinity Digram Assignment-->
             <section class="assignment">
                 <a href="pdf/parkingfinder.pdf"><h2>Affinity Diagram: Parking Finder</h2></a>
-                <a href="pdf/parkingfinder.pdf"><img src="image/parkingfinderimage.png" width="300" height="300"></a>
+                <a href="pdf/parkingfinder.pdf"><img src="image/parkingfinderimage.png" width="220" height="220"></a>
                 <p>
                     My group members and I got together to come up with the many problems, calculations, and solutions to finding parking.
                 </p>
@@ -32,7 +32,7 @@
             <!-- Personna Assignment-->
             <section class="assignment">
                 <a href="pdf/Personas_Combined.pdf"><h2>Personna: 5 Personnas for Parking Finder App</h2></a>
-                <a href="pdf/Personas_Combined.pdf"><img src="image/PersonnaImage.jpg" width="300" height="300"></a>
+                <a href="pdf/Personas_Combined.pdf"><img src="image/PersonnaImage.jpg" width="220" height="220"></a>
                 <p>
                     Personnas of typical parking finder app users.
                 </p>
@@ -41,7 +41,7 @@
             <!-- Storyboard Assignment-->
             <section class="assignment">
                 <a href="pdf/parking_finder_storyboards.pdf"><h2>Storyboard: 5 Storyboards for Parking Finder App </h2></a>
-                <a href="pdf/parking_finder_storyboards.pdf"><img src="image/storyboardhandout.JPG" width="300" height="300"></a>
+                <a href="pdf/parking_finder_storyboards.pdf"><img src="image/storyboardhandout.JPG" width="220" height="220"></a>
                 <p>
                     Storyboards that represent the benefits of using the Parking Finder app for each personna.
                 </p>
@@ -50,7 +50,7 @@
             <!-- App Sketch Assignment-->
             <section class="assignment">
                 <a href="pdf/ParkingSketch.pdf"><h2>Sketches</h2></a>
-                <a href="pdf/ParkingSketch.pdf"><img src="image/appsketchimage.PNG" width="300" height="300"></a>
+                <a href="pdf/ParkingSketch.pdf"><img src="image/appsketchimage.PNG" width="220" height="220"></a>
                 <p>
                     Rough ideas of how the application may look.
                 </p>
@@ -59,9 +59,18 @@
             <!-- Prototype Assignment-->
             <section class="assignment">
                 <a href=https://youtu.be/nmEbS1jprYY><h2>Paper Prototype</h2></a>
-                <a href=https://youtu.be/nmEbS1jprYY><img src="image/prototypeimage.jpg" width="300" height="300"></a>
+                <a href=https://youtu.be/nmEbS1jprYY><img src="image/prototypeimage.jpg" width="220" height="220"></a>
                 <p>
                     Paper walk-through of every screen in the Parking Finder application.
+                </p>
+            </section>
+
+            <!-- Hi-fi Prototype Assignment-->
+            <section class="assignment">
+                <a href="pdf/Parking Finder HiFi-html (1)/index.html"><h2>Hi-Fi Prototype: Parking Finder App</h2></a>
+                <a href="pdf/Parking Finder HiFi-html (1)/index.html"><img src="image/parkingfinderhifi.JPG" width="220" height="220"></a>
+                <p>
+                    A Hi-fi prototype walk-through of every screen in the parking finder application.
                 </p>
             </section>
         </div>
