--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
             <!-- Hi-fi Prototype Assignment-->
             <section class="assignment">
-                <a href="pdf/Parking Finder HiFi-html (1)/index.html"><h2>Hi-Fi Prototype: Parking Finder App</h2></a>
-                <a href="pdf/Parking Finder HiFi-html (1)/index.html"><img src="image/parkingfinderhifi.JPG" width="220" height="220"></a>
+                <a href="hifi/Parking Finder HiFi-html (1)/preview.html"><h2>Hi-Fi Prototype: Parking Finder App</h2></a>
+                <a href="hifi/Parking Finder HiFi-html (1)/preview.html"><img src="image/parkingfinderhifi.JPG" width="220" height="220"></a>
                 <p>
                     A Hi-fi prototype walk-through of every screen in the parking finder application.
                 </p>
